# xmakemol2

./: INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.orig  PROBLEMS  README  README.md  ToDo.txt  acconfig.h  acinclude.m4  aclocal.m4  animate.c  bbox.c  bbox.h  bonds.h  canvas.c  config.h  config.h.in  config.status  configure  configure.in  control.c  crystal.c  defs.h  draw.c  draw.h  edit.c  elements  fig.c  file.c  frames.c  gl2ps.c  gl2ps.h  gl_funcs.c  gl_funcs.h  globals.h  help.c  menus.c  operations.c  (+19 more)
.deps/: animate.P  basename.P  bbox.P  canvas.P  control.P  crystal.P  draw.P  edit.P  fig.P  file.P  frames.P  gl2ps.P  gl_funcs.P  help.P  menus.P  operations.P  region.P  rotate.P  sort.P  store.P  track.P  translate.P  utils.P  vectors.P  view.P  xmakemol.P
examples/: .temp.xyz  caffeine.xyz  crystal.xyz  teste_ref.xyz~  water.xyz
